# boltjs-refactor

./: .ghci  COPYING  README.md  boltjs-refactor.cabal
demo/: Main.hs  boltjs-refactor-demo.cabal
demo/Language/JavaScript/Bolt/: Demo.hs
demo/data/: Example.js
src/Language/JavaScript/: Bolt.hs
src/Language/JavaScript/Bolt/: Core.hs
test/: Main.hs  boltjs-refactor-test.cabal
test/Language/JavaScript/Bolt/: Tests.hs
