Name:               boltjs-refactor
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          (c) 2012 Mark Hibberd
Synopsis:           javascript refactoring
Category:           xx
Homepage:           https://github.com/markhibberd/boltjs-refactor
Bug-reports:        https://github.com/markhibberd/boltjs-refactor/issues
Cabal-Version:      >= 1.8
Build-Type:         Simple
Description:
  boltjs-refactor

Source-Repository   head
  Type:             git
  Location:         https://github.com/markhibberd/boltjs-refactor.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base                            >= 3          && < 5
                    , language-ecmascript           >= 0.10
  GHC-Options:
                    -Wall -fno-warn-orphans

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    Language.JavaScript.Bolt
                    Language.JavaScript.Bolt.Core

