Name:               boltjs-refactor-demo
Version:            0.0.1
License:            BSD3
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          Mark Hibberd
Synopsis:           Demo package for javascript refactoring
Category:           Experimental
Description:        Demo package for javascript refactoring
Homepage:           https://github.com/markhibberd/boltjs-refactor
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         https://github.com/markhibberd/boltjs-refactor.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Executable          boltjs-refactor-demo
  Hs-Source-Dirs:
                    ../../src .

  Main-Is:
                    Main.hs

  Build-Depends:
                   base >= 3 && < 5

